WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203634
Web Inspector: Timelines: ResizeObserver callbacks are not labeled in the Events timeline
https://bugs.webkit.org/show_bug.cgi?id=203634
Summary
Web Inspector: Timelines: ResizeObserver callbacks are not labeled in the Eve...
Simon Fraser (smfr)
Reported
2019-10-30 15:24:12 PDT
Created
attachment 382367
[details]
Testcase Resize Observer callbacks just show as "Script Evaluated".
Attachments
Testcase
(806 bytes, text/html)
2019-10-30 15:24 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(1.75 KB, patch)
2019-10-30 19:18 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-30 15:24:45 PDT
<
rdar://problem/56760736
>
Devin Rousso
Comment 2
2019-10-30 19:18:23 PDT
Created
attachment 382409
[details]
Patch
WebKit Commit Bot
Comment 3
2019-10-30 20:47:41 PDT
Comment on
attachment 382409
[details]
Patch Clearing flags on attachment: 382409 Committed
r251832
: <
https://trac.webkit.org/changeset/251832
>
WebKit Commit Bot
Comment 4
2019-10-30 20:47:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug