Web Inspector: Timelines: ResizeObserver callbacks are not labeled in the Events timeline https://bugs.webkit.org/show_bug.cgi?id=203634 <rdar://problem/56760736>

Reviewed by Simon Fraser.

Wrap the `ResizeObserver` event handler in two `InspectorInstrumentation` calls so the
frontend knows how to properly label the callbacks.

* page/ResizeObserver.cpp:
(WebCore::ResizeObserver::deliverObservations):


Canonical link: https://commits.webkit.org/217023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251832 268f45cc-cd09-0410-ab3c-d52691b4dbfc